<resources>
    <string name="app_name">FoodieApp</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="test">sdsa</string>
    <string name="sign_in">Sign In</string>
    <string name="show_password">Show Password</string>
    <string name="enter_your_password_again">Enter your Password again</string>
    <string name="retype_password">Retype Password</string>
    <string name="wellcome">Wellcome</string>
    <string name="show_password1">Show Password</string>
    <string name="todo">TODO</string>
    <string name="gender">Gender</string>
    <string name="button">Button</string>
    <string name="enter_m_f">Enter M/F</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>